Add buttons hero

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    --sniptan-sun: #ffcd1e;
+    --snitap-sun: #ffcd1e;
     --sniptap-sky-mid: #06b6d4;
     --sniptap-sky-light: #67e8f9;
     --sniptap-joy-mid: #db2777;
