--- a/styles/footer.css
+++ b/styles/footer.css
@@ -86,7 +86,7 @@ footer {
                 height: inherit;
                 border-radius: inherit;
 
-                background: var(--sniptap-sun);
+                background: var(--snitap-sun);
 
                 position: absolute;
                 top: 0;
